// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must render Header with session 1`] = `
<div>
  renderExists
</div>
`;

exports[`must render Header without session 1`] = `
<div>
  renderEmpty
</div>
`;
